# forgemind

./: .env.example  .gitignore  AGENTS.md  AGENTS_PLAN.md  AGENTS_RULES.md  CODEX_PLAN.md  DESIGN.md  Makefile  PROMPT.md  README.md  UI_CODEX_PROMPT.md  docker-compose.yml
admin/: .env.example  package-lock.json  package.json
admin/app/: ProfilePolicyPanel.tsx  layout.tsx  page.tsx  styles.css
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_profile_facts.py  0003_encrypt_memory_profile_facts.py  0004_profile_fact_capture_policy.py
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/prompts/: conversation_agent.md  guidance_classification_agent.md  memory_extraction_agent.md  safety_classification_agent.md  tone_evaluation_agent.md
backend/app/services/: ai.py  auth.py  crypto.py  guidance.py  memory.py  observability.py  openai_provider.py  profile_facts.py  safety.py  store.py  subscription.py
backend/app/tools/: encrypt_existing_sensitive_data.py
backend/tests/: test_auth.py  test_chat_orchestration.py  test_crypto.py  test_data_controls.py  test_guidance.py  test_memory.py  test_progress.py  test_safety.py  test_speech.py  test_store.py  test_subscription.py
docs/: AGENTS.md
infra/prometheus/: prometheus.yml
mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile/android/: settings.gradle
mobile/src/: api.ts  components.tsx  design.ts  preferences.ts  screens.tsx
(+11 files in other folders)
