[project]
name = "forgemind-backend"
version = "0.1.0"
description = "ForgeMind FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pgvector==0.3.6",
    "openai==1.58.1",
    "prometheus-client==0.21.1",
    "sentry-sdk[fastapi]==2.19.2",
    "posthog==3.7.4",
    "pyjwt==2.10.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
